# quickstream

./: README.md  pyproject.toml  tests.py
quickstream/: __init__.py  base.py
quickstream/providers/: bandcamp.py  mixcloud.py  soundcloud.py
